--- a/MiniLaunch.WPFApp/MiniLaunch.WPFApp.csproj
+++ b/MiniLaunch.WPFApp/MiniLaunch.WPFApp.csproj
@@ -10,6 +10,9 @@
 		<RepositoryType>git</RepositoryType>
 		<Version>0.1.0</Version>
 	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\MiniLaunch.Common\MiniLaunch.Common.csproj" />
