--- a/MiniLaunch.WPFApp/MiniLaunch.WPFApp.csproj
+++ b/MiniLaunch.WPFApp/MiniLaunch.WPFApp.csproj
@@ -10,10 +10,25 @@
 		<PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
 		<RepositoryUrl>https://github.com/ashakoor/DDO-MiniLaunch</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<Version>0.2.0</Version>
+		<Version>0.2.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\MiniLaunch.Common\MiniLaunch.Common.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Settings.Designer.cs">
+	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Settings.settings</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Properties\Settings.settings">
+	    <Generator>SettingsSingleFileGenerator</Generator>
+	    <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+	  </None>
 	</ItemGroup>
 </Project>
